Completing pre-requisites

--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -1,12 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6e664d53",
+   "metadata": {},
+   "source": [
+    "# Guidelines for Prompting\n",
+    "In this lesson, you'll practice two prompting principles and their related tactics in order to write effective prompts for large language models.\n",
+    "\n",
+    "## Setup\n",
+    "#### Load the API key and relevant Python libaries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a197859",
+   "metadata": {},
+   "source": [
+    "In this course, we've provided some code that loads the OpenAI API key for you."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed1327a9",
+   "id": "9b943465",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import openai\n",
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "\n",
+    "# set your api key here directly as a string or put it in environment variables\n",
+    "openai.api_key  = os.getenv('OPENAI_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c044fa7",
+   "metadata": {},
+   "source": [
+    "#### helper function\n",
+    "Model Used - OpenAI's `gpt-3.5-turbo` model and the [chat completions endpoint](https://platform.openai.com/docs/guides/chat). \n",
+    "\n",
+    "This helper function will make it easier to use prompts and look at the generated outputs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d70b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "    )\n",
+    "    return response.choices[0].message[\"content\"]"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
