--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e664d53",
+   "id": "916e58f3",
    "metadata": {},
    "source": [
     "# Guidelines for Prompting\n",
-    "In this lesson, you'll practice two prompting principles and their related tactics in order to write effective prompts for large language models.\n",
+    "Practicing two prompting principles and their related tactics in order to write effective prompts for large language models.\n",
     "\n",
     "## Setup\n",
     "#### Load the API key and relevant Python libaries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a197859",
-   "metadata": {},
-   "source": [
-    "In this course, we've provided some code that loads the OpenAI API key for you."
    ]
   },
   {
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c044fa7",
+   "id": "15db262b",
    "metadata": {},
    "source": [
     "#### helper function\n",
@@ -51,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d70b66",
+   "id": "3dfab650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +56,97 @@
     "    )\n",
     "    return response.choices[0].message[\"content\"]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50aa23ed",
+   "metadata": {},
+   "source": [
+    "## Prompting Principles\n",
+    "- **Principle 1: Write clear and specific instructions**\n",
+    "- **Principle 2: Give the model time to “think”**\n",
+    "\n",
+    "### Tactics\n",
+    "\n",
+    "#### Tactic 1: Use delimiters to clearly indicate distinct parts of the input\n",
+    "- Delimiters can be anything like: ```, \"\"\", < >, `<tag> </tag>`, `:`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d5a3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = f\"\"\"\n",
+    "You should express what you want a model to do by \\ \n",
+    "providing instructions that are as clear and \\ \n",
+    "specific as you can possibly make them. \\ \n",
+    "This will guide the model towards the desired output, \\ \n",
+    "and reduce the chances of receiving irrelevant \\ \n",
+    "or incorrect responses. Don't confuse writing a \\ \n",
+    "clear prompt with writing a short prompt. \\ \n",
+    "In many cases, longer prompts provide more clarity \\ \n",
+    "and context for the model, which can lead to \\ \n",
+    "more detailed and relevant outputs.\n",
+    "\"\"\"\n",
+    "prompt = f\"\"\"\n",
+    "Summarize the text delimited by triple backticks \\ \n",
+    "into a single sentence.\n",
+    "```{text}```\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea8008d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb049c30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc4b41d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b8197a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f99c22ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "165c1b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
