--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "916e58f3",
+   "id": "466e5755",
    "metadata": {},
    "source": [
     "# Guidelines for Prompting\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15db262b",
+   "id": "b61862d9",
    "metadata": {},
    "source": [
     "#### helper function\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dfab650",
+   "id": "cca72e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50aa23ed",
+   "id": "6ddf2567",
    "metadata": {},
    "source": [
     "## Prompting Principles\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d5a3da",
+   "id": "797a64ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea8008d",
+   "id": "4dd4fff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Tactic 2: Ask for a structured output\n",
+    "- JSON, HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4de57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Generate a list of three made-up book titles along \\ \n",
+    "with their authors and genres. \n",
+    "Provide them in JSON format with the following keys: \n",
+    "book_id, title, author, genre.\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5fd1c78",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb049c30",
+   "id": "70f019c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4b41d2",
+   "id": "6c701145",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,23 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b8197a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f99c22ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "165c1b01",
+   "id": "2119e969",
    "metadata": {},
    "outputs": [],
    "source": []
