--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "466e5755",
+   "id": "d1d380bb",
    "metadata": {},
    "source": [
     "# Guidelines for Prompting\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61862d9",
+   "id": "c70dded9",
    "metadata": {},
    "source": [
     "#### helper function\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cca72e91",
+   "id": "7ab6e661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddf2567",
+   "id": "f1d21b6e",
    "metadata": {},
    "source": [
     "## Prompting Principles\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "797a64ab",
+   "id": "d382b437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +101,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dd4fff1",
+   "cell_type": "markdown",
+   "id": "f507a10a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### Tactic 2: Ask for a structured output\n",
     "- JSON, HTML"
@@ -114,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc4de57e",
+   "id": "db675cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,33 +127,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5fd1c78",
+   "cell_type": "markdown",
+   "id": "f2788a89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Tactic 3: Ask the model to check whether conditions are satisfied"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f019c9",
+   "id": "4c98fedf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text_1 = f\"\"\"\n",
+    "Making a cup of tea is easy! First, you need to get some \\ \n",
+    "water boiling. While that's happening, \\ \n",
+    "grab a cup and put a tea bag in it. Once the water is \\ \n",
+    "hot enough, just pour it over the tea bag. \\ \n",
+    "Let it sit for a bit so the tea can steep. After a \\ \n",
+    "few minutes, take out the tea bag. If you \\ \n",
+    "like, you can add some sugar or milk to taste. \\ \n",
+    "And that's it! You've got yourself a delicious \\ \n",
+    "cup of tea to enjoy.\n",
+    "\"\"\"\n",
+    "prompt = f\"\"\"\n",
+    "You will be provided with text delimited by triple quotes. \n",
+    "If it contains a sequence of instructions, \\ \n",
+    "re-write those instructions in the following format:\n",
+    "\n",
+    "Step 1 - ...\n",
+    "Step 2 - …\n",
+    "…\n",
+    "Step N - …\n",
+    "\n",
+    "If the text does not contain a sequence of instructions, \\ \n",
+    "then simply write \\\"No steps provided.\\\"\n",
+    "\n",
+    "\\\"\\\"\\\"{text_1}\\\"\\\"\\\"\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(\"Completion for Text 1:\")\n",
+    "print(response)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c701145",
+   "id": "86ff8716",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text_2 = f\"\"\"\n",
+    "The sun is shining brightly today, and the birds are \\\n",
+    "singing. It's a beautiful day to go for a \\ \n",
+    "walk in the park. The flowers are blooming, and the \\ \n",
+    "trees are swaying gently in the breeze. People \\ \n",
+    "are out and about, enjoying the lovely weather. \\ \n",
+    "Some are having picnics, while others are playing \\ \n",
+    "games or simply relaxing on the grass. It's a \\ \n",
+    "perfect day to spend time outdoors and appreciate the \\ \n",
+    "beauty of nature.\n",
+    "\"\"\"\n",
+    "prompt = f\"\"\"\n",
+    "You will be provided with text delimited by triple quotes. \n",
+    "If it contains a sequence of instructions, \\ \n",
+    "re-write those instructions in the following format:\n",
+    "\n",
+    "Step 1 - ...\n",
+    "Step 2 - …\n",
+    "…\n",
+    "Step N - …\n",
+    "\n",
+    "If the text does not contain a sequence of instructions, \\ \n",
+    "then simply write \\\"No steps provided.\\\"\n",
+    "\n",
+    "\\\"\\\"\\\"{text_2}\\\"\\\"\\\"\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(\"Completion for Text 2:\")\n",
+    "print(response)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2119e969",
+   "id": "dcf7fa83",
    "metadata": {},
    "outputs": [],
    "source": []
