--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1d380bb",
+   "id": "4e49c5ae",
    "metadata": {},
    "source": [
     "# Guidelines for Prompting\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70dded9",
+   "id": "1e5f551c",
    "metadata": {},
    "source": [
     "#### helper function\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab6e661",
+   "id": "ba2c36b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d21b6e",
+   "id": "d0a8c383",
    "metadata": {},
    "source": [
     "## Prompting Principles\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d382b437",
+   "id": "cc8cb440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f507a10a",
+   "id": "622a1106",
    "metadata": {},
    "source": [
     "#### Tactic 2: Ask for a structured output\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db675cc4",
+   "id": "a19b6323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2788a89",
+   "id": "e52c12c0",
    "metadata": {},
    "source": [
     "#### Tactic 3: Ask the model to check whether conditions are satisfied"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c98fedf",
+   "id": "6df7ecbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ff8716",
+   "id": "d87a731c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +211,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e46ab05",
+   "metadata": {},
+   "source": [
+    "#### Tactic 4: \"Few-shot\" prompting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf7fa83",
+   "id": "0cdc2a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Your task is to answer in a consistent style.\n",
+    "\n",
+    "<child>: Teach me about patience.\n",
+    "\n",
+    "<grandparent>: The river that carves the deepest \\ \n",
+    "valley flows from a modest spring; the \\ \n",
+    "grandest symphony originates from a single note; \\ \n",
+    "the most intricate tapestry begins with a solitary thread.\n",
+    "\n",
+    "<child>: Teach me about resilience.\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e4a4d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7940842c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "672fda48",
    "metadata": {},
    "outputs": [],
    "source": []
